# Mategram

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: vp9player.cpp
app/src/main/java/com/xxcactussell/mategram/: MainActivity.kt  MainViewModel.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mategram/data/: build.gradle.kts
mategram/data/src/main/java/com/xxcactussell/data/: TdClientManager.kt  TelegramCredentials.kt
mategram/domain/: build.gradle.kts
mategram/domain/src/main/java/com/xxcactussell/customdomain/: ForwardFullInfo.kt
mategram/domain/src/main/java/com/xxcactussell/domain/: AccentColor.kt  AcceptCall.kt  AcceptTermsOfService.kt  AcceptedGiftTypes.kt  AccountInfo.kt  AccountTtl.kt  ActivateStoryStealthMode.kt  AddBotMediaPreview.kt  AddChatFolderByInviteLink.kt  AddChatMember.kt  AddChatMembers.kt  AddChatToList.kt  AddChecklistTasks.kt  AddContact.kt  AddCustomServerLanguagePack.kt  AddFavoriteSticker.kt  AddFileToDownloads.kt  AddGiftCollectionGifts.kt  AddLocalMessage.kt  AddLogMessage.kt  AddMessageReaction.kt  AddNetworkStatistics.kt  AddOffer.kt  AddPendingPaidMessageReaction.kt  AddProfileAudio.kt  AddProxy.kt  AddQuickReplyShortcutInlineQueryResultMessage.kt  AddQuickReplyShortcutMessage.kt  AddQuickReplyShortcutMessageAlbum.kt  AddRecentSticker.kt  AddRecentlyFoundChat.kt  AddSavedAnimation.kt  AddSavedNotificationSound.kt  AddStickerToSet.kt  AddStoryAlbumStories.kt  AddedReaction.kt  AddedReactions.kt  Address.kt  AdvertisementSponsor.kt  AffiliateInfo.kt  (+2932 more)
mategram/jni/: build.gradle.kts
mategram/jni/src/androidTest/java/com/xxcactussell/jni/: ExampleInstrumentedTest.kt
mategram/jni/src/main/cpp/: BuildLz4.cmake  BuildRLottie.cmake  BuildWebp.cmake  BuildYuv.cmake  CMakeLists.txt  NativeBufferPool.h  NativeQueueManager.h  build_ffmpeg.sh  build_vpx.sh  jni.cpp  log.cpp
mategram/jni/src/main/cpp/cmake/: Join.cmake  Prefix.cmake  ReadVariables.cmake
mategram/jni/src/main/cpp/stub/crc32c/: crc32c_config.h
mategram/jni/src/main/java/com/xxcactussell/jni/: BitmapProvider.kt  NativeStickerCore.kt  StickerAnimScheduler.kt  StickerController.kt  StickerRegistry.kt
mategram/jni/src/test/java/com/xxcactussell/jni/: ExampleUnitTest.kt
mategram/mategram/: build.gradle.kts
mategram/mategram/src/main/: AndroidManifest.xml
mategram/mategram/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_mategram_logo_circle.xml  ic_welcome_jetpack_compose.xml  ic_welcome_material_design.xml
mategram/mategram/src/main/res/drawable-anydpi/: ic_notification.xml
mategram/mategram/src/main/res/values/: strings.xml  themes.xml
mategram/mategram/src/main/res/values-night/: themes.xml
mategram/player/: build.gradle.kts
mategram/presentation/: build.gradle.kts
mategram/presentation/src/main/res/drawable/: cameraswitch_24px.xml  contact_phone_24px.xml  flash_off_24px.xml  ic_download_done_24.xml  ic_welcome_kotlin.xml  record_voice_over_24px.xml  video_camera_front_24px.xml  videocam_fill_24px.xml
mategram/presentation/src/main/res/values/: strings.xml
mategram/rlottie/: build.gradle.kts
mategram/rlottie/src/main/cpp/: CMakeLists.txt  rlottie.cpp
mategram/tdlib/: build.gradle.kts
mategram/utils/: build.gradle.kts
mategram/vpplayer/: build.gradle.kts
mategram/vpplayer/src/main/cpp/: CMakeLists.txt  vpplayer.cpp
mategram/vpplayer/src/main/cpp/libffmpeg-prebuilt/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mategram/vpplayer/src/main/cpp/libffmpeg-prebuilt/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mategram/vpplayer/src/main/cpp/libffmpeg-prebuilt/include/libavutil/: ffversion.h
mategram/vpplayer/src/main/cpp/libffmpeg-prebuilt/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mategram/vpplayer/src/main/cpp/libffmpeg-prebuilt/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mategram/vpplayer/src/main/cpp/libvpx-prebuilt/arm64-v8a/lib/pkgconfig/: vpx.pc
mategram/vpplayer/src/main/cpp/libvpx-prebuilt/armeabi-v7a/lib/pkgconfig/: vpx.pc
mategram/vpplayer/src/main/cpp/libvpx-prebuilt/x86/lib/pkgconfig/: vpx.pc
mategram/vpplayer/src/main/cpp/libvpx-prebuilt/x86_64/lib/pkgconfig/: vpx.pc
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/arm64-v8a/objs/webm/common/: file_util.o.d  hdr_util.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/arm64-v8a/objs/webm/mkvmuxer/: mkvmuxer.o.d  mkvmuxerutil.o.d  mkvwriter.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/arm64-v8a/objs/webm/mkvparser/: mkvparser.o.d  mkvreader.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/armeabi-v7a/objs/webm/common/: file_util.o.d  hdr_util.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/armeabi-v7a/objs/webm/mkvmuxer/: mkvmuxer.o.d  mkvmuxerutil.o.d  mkvwriter.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/armeabi-v7a/objs/webm/mkvparser/: mkvparser.o.d  mkvreader.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/include/mkvparser/: mkvparser.h
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86/objs/webm/common/: file_util.o.d  hdr_util.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86/objs/webm/mkvmuxer/: mkvmuxer.o.d  mkvmuxerutil.o.d  mkvwriter.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86/objs/webm/mkvparser/: mkvparser.o.d  mkvreader.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86_64/objs/webm/common/: file_util.o.d  hdr_util.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86_64/objs/webm/mkvmuxer/: mkvmuxer.o.d  mkvmuxerutil.o.d  mkvwriter.o.d
mategram/vpplayer/src/main/cpp/libwebm-prebuilt/x86_64/objs/webm/mkvparser/: mkvparser.o.d  mkvreader.o.d
(+659 files in other folders)
